syntax = "proto2";

package index;

option java_package = "com.expleague.sensearch.protobuf.index";
option java_outer_classname = "IndexUnits";

message IndexMeta {

  message IdMapping {
    optional string word = 1;
    optional int64 id = 2;
  }

  optional int32 pages_count = 1;
  optional double average_page_size = 2;

  optional int32 vocabulary_size = 3;
  optional bytes titles_bloom_filter = 4;

  repeated IdMapping id_mappings = 5;
}

message Page {
  optional int64 page_id = 1;
  optional string title = 2;
  optional string content = 3;
}

message TermStatistics {

  message TermFrequency {
    optional int64 term_id = 1;
    optional int32 term_frequency = 2;
  }

  optional int64 term_id = 1;
  optional int32 docuement_frequency = 2;
  optional int64 term_frequency = 3;

  repeated TermFrequency bigram_frequency = 4;
}