syntax = "proto2";

package com.expeague.sensearch.index;

option java_package = "com.expleague.sensearch.protobuf.index";
option java_outer_classname = "PlainPageData";

message PlainPage {
  optional string title = 1;
  optional string content = 2;
}